# sview

./: .gitignore  CARDANO_NODE_CONFIG.md  CODE_REVIEW.md  Cargo.toml  LICENSE  METRICS_GUIDE.md  MULTI_NODE_DEBUG.md  README.md  SRS.md  THEME_SYSTEM.md  TUI.md  TUI_IMPROVEMENTS.md  sview.webm  test_config.toml  test_load_config.rs
.github/workflows/: ci.yml  release.yml
assets/: demo.webm
docs/: CONFIGURATION.md  GETTING_STARTED.md  KEYBOARD_SHORTCUTS.md  METRICS_AUDIT.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md  screenshot.tape
src/: alerts.rs  app.rs  config.rs  geoip.rs  history.rs  main.rs  metrics.rs  peers.rs  sockets.rs  storage.rs  themes.rs  ui.rs
